fonte add e formulário corrigido

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
 ">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css
 ">
+<!-- <link href="//db.onlinewebfonts.com/c/ed0c21561b7eb2cd38dc212fe2411a65?family=FoundryMonolineOT3W08-XBd"
+  rel="stylesheet" type="text/css" /> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Hind:wght@700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.css" />
     <title>test</title>
   </head>
@@ -116,7 +119,7 @@
                   <i class="fa fa-sort-down fa-lg"></i>     
             </div>
             <button class="btn btn-lg btn-block">agendar test drive</button>
-            </div>
+          </div>
           </form>
         </div>
         <br> <br> <br> 
