icones e img ajustados

--- a/src/index.html
+++ b/src/index.html
@@ -369,17 +369,8 @@
             </div>
           </div> <br>
           <div class="h3">siga a banzai nas redes sociais</div> <br>
-          <div class="group-icons">
-            <div class="circle">
-              <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-            </div>
-            <div class="circle">
-              <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-            </div>
-            <div class="circle">
-              <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-            </div>
-          </div>
+          
+          <img src="img/Grupo 85.png" alt="">
       </div>
     </main>
     <footer>
